add further test cases for npm

--- a/test/goss/goss.yaml
+++ b/test/goss/goss.yaml
@@ -1,14 +1,14 @@
 # GOSS Manual: https://github.com/aelsabbahy/goss/blob/master/docs/manual.md
-# CMD: GOSS_FILES_PATH=./test/goss dgoss run -i -v $PWD:/project ppiper/mta-archive-builder
+# CMD: GOSS_FILES_PATH=./test/goss dgoss run --interactive --volume $PWD:/project ppiper/mta-archive-builder
 package:
   git:
     installed: true
     versions:
     - 1:2.11.0-3+deb9u4
-  python-minimal:
+  python2.7:
     installed: true
     versions:
-    - 2.7.13-2
+    - 2.7.13-2+deb9u3
 user:
   mta:
     exists: true
@@ -23,17 +23,27 @@ command:
     exit-status: 0
     stdout:
     - 1.1.19
-    stderr: []
     timeout: 10000
   mvn --version:
     exit-status: 0
     stdout:
     - Apache Maven 3.6.0
-    stderr: []
     timeout: 10000
   node --version:
     exit-status: 0
     stdout:
     - v10.13.0
-    stderr: []
+    timeout: 10000
+  curl --version:
+    exit-status: 127
+    timeout: 10000
+  npm config get registry:
+    exit-status: 0
+    stdout:
+    - https://registry.npmjs.org/
+    timeout: 10000
+  npm config get @sap:registry:
+    exit-status: 0
+    stdout:
+    - https://npm.sap.com
     timeout: 10000
