--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -1,27 +1,19 @@
 # CMD: docker-compose --file docker-compose.test.yml up
 version: '3'
 services:
-  fetch-goss:
-    image: node:8-stretch
+  goss:
+    image: aelsabbahy/goss
     volumes:
       - goss-executable:/goss
-    command: /bin/sh -c "curl -fsSL https://goss.rocks/install | GOSS_DST=/goss sh"
+    command: goss --version
   sut:
     build: .
     depends_on: 
-      - fetch-goss
+      - goss
     volumes:
       - goss-executable:/goss
       - ./test/goss:/tests
     working_dir: /tests
-    command:
-      - /bin/sh
-      - -c
-      - |
-          # wait till dgoss is loaded 
-          until test -e /goss/dgoss; do sleep 2; done
-          /goss/goss --gossfile goss.yaml validate
-          # cleanup
-          rm -rf .mta
+    command: /goss/goss --gossfile goss.yaml validate
 volumes:
   goss-executable:
