--- a/docker-compose.test.yml
+++ b/docker-compose.test.yml
@@ -1,4 +1,4 @@
-# CMD: docker-compose --file docker-compose.test.yml up
+# CMD: docker-compose --file docker-compose.test.yml up --build
 version: '3'
 services:
   goss:
@@ -11,9 +11,8 @@ services:
     depends_on: 
       - goss
     volumes:
+      - .:/project
       - goss-executable:/goss
-      - ./test/goss:/tests
-    working_dir: /tests
-    command: /goss/goss --gossfile goss.yaml validate
+    command: /goss/goss --gossfile test/goss/goss.yaml validate --format documentation --color
 volumes:
   goss-executable:
